monitoring/prometheus/prometheus-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-operator
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
  - host: www-dev1.ds.iris.edu
    http:
      paths:
      - path: /prometheus/(.*)
        pathType: Prefix
        backend:
          service:
            name: prometheus-operator
            port:
              number: 9090
  tls:
  - hosts:
    - "www-dev1.ds.iris.edu"
    secretName: www-dev1-ds-iris-edu
